--- a/src/pages/clientes/clientes.html
+++ b/src/pages/clientes/clientes.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the ClientesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>clientes</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Clientes</ion-title>
+    <ion-buttons right>
+      <button ion-button icon-only (click)="addOrEdit({})">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content no-padding>
+  <ion-list lines *ngIf="!isLoading">
+    <ion-item text-wrap *ngIf="lista.length == 0">
+      Não há nenhum cliente cadastrado.
+    </ion-item>
+    <ion-item *ngFor="let item of lista" text-wrap (click)="addOrEdit(item)">
+      {{ item.nome }}
+      <ion-note item-end>
+        CPF : {{ item.cpf }}
+      </ion-note>
+    </ion-item>
+  </ion-list>
 </ion-content>
