--- a/src/pages/pedidos/pedidos.html
+++ b/src/pages/pedidos/pedidos.html
@@ -24,7 +24,7 @@
           <button ion-button>Aceitar</button>
           <button ion-button>Recusar</button>
           <button ion-button>Chat</button>
-          <button ion-button>Cliente</button>
+          <!-- <button (click)="clienteInfo(item.usuarioId)" ion-button>Cliente</button> -->
         </ion-row>
 
       </div>
