--- a/src/pages/pedidos/pedidos.html
+++ b/src/pages/pedidos/pedidos.html
@@ -19,6 +19,7 @@
       <p>Status: <strong>{{item.status}}</strong></p>
       <p>Quantidade Total itens: <strong>{{ contaItem(item) }}</strong></p>
       <p>Valor total: <strong> {{ item.valorTotal }}</strong></p>
+      <p>Tempo para Entrega: <strong> {{ item.tempoEntrega }}</strong></p>
       <div>
         <ion-row class="botoes">
           <button ion-button>Aceitar</button>
