--- a/src/pages/mensagens/mensagens.html
+++ b/src/pages/mensagens/mensagens.html
@@ -2,9 +2,9 @@
     <ion-navbar color="primary">
         <ion-title>Mensagens</ion-title>
         <ion-buttons end>
-            <button ion-button icon-only (click)="sair()">
-        <ion-icon name="exit"></ion-icon>
-      </button>
+            <!-- <button ion-button icon-only (click)="sair()">
+                <ion-icon name="exit"></ion-icon>
+            </button> -->
         </ion-buttons>
     </ion-navbar>
 </ion-header>
@@ -18,12 +18,12 @@
             </div>
             <ng-template #message>
                 <div class="alinhaMsg">
-                    <ion-card class="myMessage" text-right *ngIf="messageType === 'userMessage'">
+                    <ion-card class="myMessage" text-right *ngIf="chat.type === 'userMessage'">
                         <ion-card-header>
                             <span class="msg-name">
-                <strong>Eu</strong>
-                em
-              </span>
+                                <strong>Cliente</strong>
+                                em
+                            </span>
                             <span class="msg-date">{{chat.sendDate | date:'dd/MM/yyyy'}}</span>
                         </ion-card-header>
                         <ion-card-content>
@@ -37,15 +37,41 @@
                         </ion-card-content>
                     </ion-card>
                 </div>
-                <ion-card text-left *ngIf="messageType !== 'userMessage'">
+                <div class="alinhaMsgOp">
+                    <ion-card class="opMessage" text-left *ngIf="chat.type === 'operadorMessage'">
+                        <ion-card-header>
+                            <span class="msg-name">
+                                <strong>Operador</strong>
+                                em
+                            </span>
+                            <span class="msg-date">{{chat.sendDate | date:'dd/MM/yyyy'}}</span>
+                        </ion-card-header>
+                        <ion-card-content>
+                            <div class="chat-message" text-left>
+                                <div class="right-bubble">
+                                    <p class="msg-text" text-wrap>
+                                        {{chat.mensagem}}
+                                    </p>
+                                </div>
+                            </div>
+                        </ion-card-content>
+                    </ion-card>
+                </div>
+
+
+
+
+
+                <!-- <div class="alinhaMsg"></div> -->
+                <!-- <ion-card text-left *ngIf="messageType === 'operadorMessage'">
                     <ion-card-header>
                         <span class="msg-name">
-              <strong>Atendente</strong>
-              em
-            </span>
+                            <strong>Atendente</strong>
+                            em
+                        </span>
                         <span class="msg-date">
-              {{chat.sendDate | date:'dd/MM/yyyy hh:mm' }}
-            </span>
+                            {{chat.sendDate | date:'dd/MM/yyyy hh:mm' }}
+                        </span>
                     </ion-card-header>
                     <ion-card-content>
                         <div class="chat-message" text-left>
@@ -54,7 +80,7 @@
                             </div>
                         </div>
                     </ion-card-content>
-                </ion-card>
+                </ion-card> -->
             </ng-template>
         </ion-item>
     </ion-list>
@@ -64,7 +90,8 @@
     <ion-grid>
         <ion-row>
             <ion-col col-10>
-                <ion-input type="text" placeholder="Escreva uma mensagem" [(ngModel)]="data.mensagem" name="mensagem" class="fontsize">
+                <ion-input type="text" placeholder="Escreva uma mensagem" [(ngModel)]="data.mensagem" name="mensagem"
+                    class="fontsize">
                 </ion-input>
             </ion-col>
             <ion-col col-2 (click)="enviarMensagem()" class="iconeMsg">
