--- a/src/pages/pedidos/pedidos.html
+++ b/src/pages/pedidos/pedidos.html
@@ -52,7 +52,7 @@
         <ion-row class="botoes">
           <button ion-button>Aceitar</button>
           <button ion-button>Recusar</button>
-          <button ion-button>Chat</button>
+          <button ion-button (click)="mensagens(pedido)">Chat</button>
         </ion-row>
       </div>
     </ion-card-content>
