--- a/src/pages/mensagens/mensagens.html
+++ b/src/pages/mensagens/mensagens.html
@@ -24,7 +24,7 @@
                                 <strong>Cliente</strong>
                                 em
                             </span>
-                            <span class="msg-date">{{chat.sendDate | date:'dd/MM/yyyy'}}</span>
+                            <span class="msg-date">{{chat.sendDate | date:'dd/MM/yyyy, HH:mm'}}</span>
                         </ion-card-header>
                         <ion-card-content>
                             <div class="chat-message" text-right>
@@ -44,7 +44,7 @@
                                 <strong>Operador</strong>
                                 em
                             </span>
-                            <span class="msg-date">{{chat.sendDate | date:'dd/MM/yyyy'}}</span>
+                            <span class="msg-date">{{chat.sendDate | date:'dd/MM/yyyy, HH:mm'}}</span>
                         </ion-card-header>
                         <ion-card-content>
                             <div class="chat-message" text-left>
