--- a/src/pages/adm-operador/adm-operador.html
+++ b/src/pages/adm-operador/adm-operador.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Clientes</ion-title>
+    <ion-title>Operadores</ion-title>
     <ion-buttons right>
       <button ion-button clear (click)="salvar()">
         Salvar
