--- a/src/pages/operadores/operadores.html
+++ b/src/pages/operadores/operadores.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Clientes</ion-title>
+    <ion-title>Operadores</ion-title>
     <ion-buttons right>
       <button ion-button icon-only (click)="addOrEdit({})">
         <ion-icon name="add"></ion-icon>
