envio msg e validações

--- a/src/pages/pedidos/pedidos.html
+++ b/src/pages/pedidos/pedidos.html
@@ -35,7 +35,7 @@
       <!-- <strong>Quantidade Total itens: <strong>{{ contaItem(produtos) }}</strong></p> -->
       <p>Valor total: <strong> {{ pedido.valorTotal }}</strong></p>
       <p>Forma de Pagamento: <strong>{{pedido.formaPagamento}}</strong></p>
-      <p>Status Entrega: <strong> {{ pedido.tempoEntrega }}</strong></p>
+      <p>Tempo entrega: <strong> {{ pedido.tempoEntrega }}</strong></p>
       <p>Cliente: <strong> {{ pedido.usuarioNome }}</strong></p>
       <div class="enderecoEntrega">
         <p><strong>Endereço de Entrega</strong></p>
