--- a/src/pages/pedidos/pedidos.html
+++ b/src/pages/pedidos/pedidos.html
@@ -14,11 +14,14 @@
 <ion-content no-padding>
   <div padding>
     <ion-segment [(ngModel)]="statusPedido">
+      <ion-segment-button value="Aguardando">
+        Aguardando
+      </ion-segment-button>
       <ion-segment-button value="Pedido Aceito">
-        Aceitos
+        Aceito
       </ion-segment-button>
       <ion-segment-button value="Pedido Recusado">
-        Recusados
+        Recusado
       </ion-segment-button>
       <ion-segment-button value="Saiu para Entrega">
         Entrega
@@ -29,6 +32,76 @@
   <div *ngFor="let pedido of pedidos">
 
     <div [ngSwitch]="statusPedido">
+
+
+      <div *ngSwitchCase="'Aguardando'">
+        <ion-card *ngIf="pedido.status === 'Aguardando'" style="border-radius: 10px;">
+          <ion-card-header icon-left>
+            <ion-icon name="cart"></ion-icon>
+            Pedido realizado em <strong>{{ pedido.dataPedido | date:'dd/MM/yyyy, HH:mm' }}</strong>
+          </ion-card-header>
+          <ion-card-content>
+            <table class="tabela">
+              <tr>
+                <th>Qtd.</th>
+                <th>Produto</th>
+                <th>Observações</th>
+              </tr>
+              <tr *ngFor="let produto of pedido.itens">
+                <td>{{produto.quantidade}}</td>
+                <td>{{produto.nomeProd}}</td>
+                <td>{{produto.observacoes}}</td>
+                <!-- <strong>Nome Produto: <strong>{{produto.nomeProd}}</strong></{{produto.quantidade}},> -->
+                <!-- <strong>Quantidade: <strong>{{produto.quantidade}}</strong></p> -->
+                <!-- <p>Produto ID: <strong>{{produto.produtoId}}</strong></p> -->
+                <!-- <strong>Observaçoes: <strong>{{produto.observacoes}}</strong></p> -->
+              </tr>
+            </table>
+            <!-- <p>Usuário ID: <strong>{{pedido.usuarioId}}</strong></p> -->
+            <!-- <strong>Aceito: <strong> {{ pedido.aceito }}</strong></p> -->
+            <p>Status: <strong>{{pedido.status}}</strong></p>
+            <!-- <strong>Quantidade Total itens: <strong>{{ contaItem(produtos) }}</strong></p> -->
+            <p>Valor total: <strong> {{ pedido.valorTotal }}</strong></p>
+            <p>Forma de Pagamento: <strong>{{pedido.formaPagamento}}</strong></p>
+            <p>Tempo entrega: <strong> {{ pedido.tempoEntrega }}</strong></p>
+            <p>Cliente: <strong> {{ pedido.usuarioNome }}</strong></p>
+            <div class="enderecoEntrega">
+              <p><strong>Endereço de Entrega</strong></p>
+              <p>Rua: <strong> {{ pedido.enderecoEntrega.rua }}</strong> Nº: <strong>
+                  {{pedido.enderecoEntrega.numero }}</strong> Bairro:
+                <strong> {{pedido.enderecoEntrega.bairro }}</strong></p>
+              <p>Cidade: <strong> {{pedido.enderecoEntrega.cidade }}</strong> Estado: <strong>
+                  {{pedido.enderecoEntrega.uf }}</strong>
+                Cep: <strong> {{pedido.enderecoEntrega.cep }}</strong></p>
+              <p>Ponto Ref.: <strong> {{pedido.enderecoEntrega.pontoReferencia }}</strong></p>
+              <p>Orientações: <strong> {{pedido.enderecoEntrega.orientacoes }}</strong></p>
+            </div>
+            <div>
+              <ion-row class="botoes">
+                <button ion-button (click)="aceitar(pedido)">Aceitar</button>
+                <button ion-button (click)="recusar(pedido)">Recusar</button>
+                <button ion-button (click)="saiuEntrega(pedido)">Saiu p/ Entrega</button>
+                <div>
+                  <button (click)="salvarPedido(pedido)" ion-button>Definir</button>
+                  <button ion-button style="width: 200px;">
+                    <ion-select [(ngModel)]="pedido.tempoEntrega" interface="popover">
+                      <ion-label>Tempo</ion-label>
+                      <ion-option value="15">15 min</ion-option>
+                      <ion-option value="30">30 min</ion-option>
+                      <ion-option value="45">45 min</ion-option>
+                      <ion-option value="60">60 min</ion-option>
+                    </ion-select>
+                  </button>
+                </div>
+                <button ion-button (click)="mensagens(pedido)">Chat</button>
+                <button ion-button>Imprimir</button>
+              </ion-row>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </div>
+
+
       <div *ngSwitchCase="'Pedido Aceito'">
         <ion-card *ngIf="pedido.status === 'Pedido Aceito'" style="border-radius: 10px;">
           <ion-card-header icon-left>
